# secret-ai-writer

./: .gitignore  Dockerfile  README.md  pyproject.toml
ai_core/: confidential_chain.py  secret_ai_client.py
backend/: ai_bridge.py  mock_bridge.py  mock_service.js  server.js
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
scripts/: deploy_contract.sh  setup_wallet.sh  test_connectivity.sh  test_contract.sh
secret_ai_writer/ai_core/: ai_integration.py  confidential_chain.py  contract_integration.py  secret_ai_client.py
tests/: demo_ai_integration.py  test_contract.py
